# double_game

./: CMakeLists.txt  Globals.h  README.md  doodle.cpp  main.cpp  platform.cpp
hdr/: CustomButton.h  Doodle.h  EndGameWidget.h  GameWidget.h  Generator.h  Globals.h  MainWindow.h  MenuWidget.h  PainterWidget.h  Platform.h  RemoveUnnecessaryPlatforms.h
src/: CustomButton.cpp  EndGameWidget.cpp  GameWidget.cpp  Generator.cpp  Globals.cpp  HighScoresDialog.cpp  MainWindow.cpp  MenuWidget.cpp  PainterWidget.cpp  RemoveUnnecessaryPlatforms.cpp  doodle.cpp  platform.cpp
